[project]
name = "okta-agents"
version = "0.1.0"
description = "Multi-agent Okta security log triage pipeline (LangGraph)"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "langchain-chroma>=0.2",
    "langgraph>=1.0",
    "chromadb>=1.0",
    "pydantic>=2.7",
    "pandas>=2.2",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["okta_agents"]

[tool.pytest.ini_options]
markers = ["live: tests that call the real OpenAI API (deselect with '-m \"not live\"')"]
